feat: getCourseExams() with filters (Admin Route)
