# routes/api.php
@@ -23,17 +23,18 @@ Route::post('login', [AuthController::class, 'login']);
 Route::middleware('auth:api')->group(function(){
     Route::resource('exam-periods', ExamPeriodController::class)->only(['index']);
     Route::resource('exam-registrations', ExamRegistrationController::class)->only(['index','store']);
-    Route::delete('/exam-registrations', [ExamRegistrationController::class,'destroy']);
+    Route::delete('exam-registrations', [ExamRegistrationController::class,'destroy']);
     Route::get('course-exams/registable', [CourseExamController::class,'getRegistableCourseExams']);
     Route::get('course-exams/{examPeriod}', [CourseExamController::class, 'getRemainingCourseExams']);
     Route::get('exam-registrations/notGraded',[ExamRegistrationController::class,'notGraded']);
     Route::post('logout', [AuthController::class, 'logout']);
     
      Route::middleware('admin-auth')->group(function(){
-        Route::post('register', [AuthController::class, 'register']);
-        Route::get('exam-registrations/notGraded/all',[ExamRegistrationController::class,'notGraded_all']);
-        Route::put('/exam-registrations', [ExamRegistrationController::class,'update']);
-        Route::get( "/course-exam-reports/{courseId}/{examPeriodId}", [CourseExamReportController::class,'getReportForCourseExam']);
+         Route::get('exam-registrations/notGraded/all',[ExamRegistrationController::class,'notGraded_all']);
+         Route::get( "course-exam-reports/{courseId}/{examPeriodId}", [CourseExamReportController::class,'getReportForCourseExam']);
+         Route::get('course-exams', [CourseExamController::class,'getCourseExams']);
+         Route::post('register', [AuthController::class, 'register']);
+         Route::put('exam-registrations', [ExamRegistrationController::class,'update']);
      });
 
  });
